          01  01'  .1  {#} - Bug-fix
          0:  10   00  {^} - improvement
          :.  1    10  {-} - removed
          .   1    0:
              0.    :.
              .     .ß

--=========================( NEW SETTINGS AND FILES )==============================-

    NEW slftp.ini parameter(s):
      only_use_routable_sites_on_reqfill=0
      parse_boxofficemojo_exact=0
      new_news_announce_interval=3

    1. compare your slftp.ini with the provided one in /dist folder, many changes
    2. update your helpfiles with the provided one in /dist/help folder
    3. delete your old slftp.news file (if existing)

--===========================( KNOWN BUG in v1.5.* )================================-

    OpenSSL v1.1.* isn't supported yet
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0

--=============================( SLFTP v1.5.6 )===================================-
    {+} Blowfish CBC support (#124)
    {+} Box Office Mojo support
    {+} New HTTP Library (up to 50% faster) with Socks5 support
    {+} News System to store important messages to encrypted file. (#173, #164, #198)
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {+} New !affils command.
    {+} Show a message when 0 byte file was detected on startup (#189)                                              --- not tested with a real 0byte file ---
    {+} !status and !uptime shows if you use 32/64-bit version of slftp and used compiler version
    {+} !lastlog command to show last log entries. (#160)
    {+} Support for CTCP Requests (might be useful for scripters)
    {+} Show a warn message if important files not found on startup
    {+} Show PID & actual memory usage in !status command (atm linux only!) (#170)